--- a/_includes/sc/intro.html
+++ b/_includes/sc/intro.html
@@ -1,5 +1,20 @@
 <p>
-  <a href="{{site.swc_site}}">Software Carpentry</a>
+  The UF Carpentries Club is offering a two day Software Carpentry workshop to help the
+  UF community get started learning Python and common software development tools such
+  as the Unix shell, SQL, and Git. Need to learn some programming for a class? Have data
+  you're scared to work with in Excel? Want to collaborate effectivly with your peers?
+  We were there once too. Come start learning with us.
+</p>
+<p>
+  Our instructors are trained by the Carpentries in evidence-based pedagogy and our 
+  materials have been developed collaboratively over year by dozens of contributors.
+  The <a href="https://informatics.institute.ufl.edu/">University of Florida Informatics Institute</a>
+  has generously volunteered space and resources for this workshop in order to
+  advance the skillset of the UF community. The organizers, instructors, and helpers 
+  are volunteering their time to help UF, and you!
+</p>
+<p>
+  The international <a href="{{site.swc_site}}">Software Carpentry</a> organization
   aims to help researchers get their work done
   in less time and with less pain
   by teaching them basic research computing skills.
