--- a/_includes/sc/intro.html
+++ b/_includes/sc/intro.html
@@ -7,7 +7,7 @@
 </p>
 <p>
   Our instructors are trained by the Carpentries in evidence-based pedagogy and our 
-  materials have been developed collaboratively over year by dozens of contributors.
+  materials have been developed collaboratively over years by dozens of contributors.
   The <a href="https://informatics.institute.ufl.edu/">University of Florida Informatics Institute</a>
   has generously volunteered space and resources for this workshop in order to
   advance the skillset of the UF community. The organizers, instructors, and helpers 
