--- a/_includes/sc/intro.html
+++ b/_includes/sc/intro.html
@@ -2,7 +2,7 @@
   The UF Carpentries Club is offering a two day Software Carpentry workshop to help the
   UF community get started learning Python and common software development tools such
   as the Unix shell, SQL, and Git. Need to learn some programming for a class? Have data
-  you're scared to work with in Excel? Want to collaborate effectivly with your peers?
+  you're scared to work with in Excel? Want to collaborate effectively with your peers?
   We were there once too. Come start learning with us.
 </p>
 <p>
